@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam classBackgroundColor #EDF5EF
skinparam classBorderColor #17624D
class Usuario {
 - id : int
 - nombre : String
 - apellido : String
 - email : String
 - passwordHash : String
 - telefono : String
 - rol : String
 - estado : String
 - fechaRegistro : LocalDateTime
 + Usuario()
 + getters / setters
}
class Comedor {
 - id : int
 - nombre : String
 - descripcion : String
 - direccion : String
 - zona : String
 - distrito : String
 - provincia : String
 - responsable : String
 - telefono : String
 - estado : String
 - fechaRegistro : LocalDateTime
 + Comedor()
 + getters / setters
}
class Necesidad {
 - id : int
 - comedorId : int
 - nombre : String
 - descripcion : String
 - cantidadNecesaria : BigDecimal
 - unidad : String
 - prioridad : String
 - estado : String
 + Necesidad()
 + getters / setters
}
class Donacion {
 - id : int
 - donanteId : int
 - comedorId : int
 - tipo : String
 - cantidad : BigDecimal
 - unidad : String
 - descripcion : String
 - estado : String
 - fechaRegistro : LocalDateTime
 - fechaEntrega : LocalDateTime
 + Donacion()
 + getters / setters
}
Usuario "1" -- "0..*" Donacion : realiza
Comedor "1" -- "0..*" Donacion : recibe
Comedor "1" -- "0..*" Necesidad : publica
note bottom of Donacion
Los nombres del comedor y donador se incluyen
como campos de presentación obtenidos por JOIN.
Las asociaciones se almacenan como identificadores.
end note
@enduml
